Utworzono za pomocą Colab

--- a/ML_scikit_learn_classification.ipynb
+++ b/ML_scikit_learn_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyM4NnPj3STRs4cosR1Q6oOu",
+      "authorship_tag": "ABX9TyNwk1/v2HcpKx7l4jx5bygq",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -568,7 +568,7 @@
         "from sklearn.linear_model import LogisticRegression\n",
         "\n",
         "model = LogisticRegression(solver='lbfgs', max_iter=1000)\n",
-        "model.fit(data_train, target_train) # fit() pozwala przetrenować nasz model na danych treningowych"
+        "model.fit(data_train, target_train) # metoda fit() pozwala przetrenować nasz model na danych treningowych"
       ],
       "metadata": {
         "colab": {
@@ -1002,7 +1002,7 @@
     {
       "cell_type": "code",
       "source": [
-        "target_pred = model.predict(data_test) # uruchamiamy model na naszych danych testowych i w rezultacie dostajemy tablicę z przewidzianymi targetami\n",
+        "target_pred = model.predict(data_test) # metoda predict() uruchamiamy model na naszych danych testowych i w rezultacie dostajemy tablicę z przewidzianymi targetami\n",
         "target_pred"
       ],
       "metadata": {
